--- a/Runtime/RtObject_h/Classes/RtObject/index.html
+++ b/Runtime/RtObject_h/Classes/RtObject/index.html
@@ -384,7 +384,7 @@ Terminates programme by default.
 <a name="//apple_ref/doc/methodparam/RtObject/doesNotUnderstand:/aMessage"></a>
 <code>aMessage</code>
 </dt>
-<dd><p>A <!-- a logicalPath="//apple_ref/occ/cl/Message //apple_ref/occ/tdef/Message //apple_ref/occ/tag/Message //apple_ref/occ/struct/Message //apple_ref/occ/intf/Message //apple_ref/occ/econst/Message //apple_ref/occ/data/Message //apple_ref/occ/clconst/Message //apple_ref/occ/instm/Message //apple_ref/occ/clm/Message //apple_ref/occ/intfcm/Message //apple_ref/occ/intfm/Message //apple_ref/occ/func/Message //apple_ref/occ/ftmplt/Message //apple_ref/occ/defn/Message //apple_ref/occ/macro/Message //apple_ref/doc/com/intfm/Message //apple_ref/doc/anysymbol/Message" -->Message<!-- /a --> object representing the message that
+<dd><p>A <a href="../../../Message_h/Classes/Message/index.html#//apple_ref/occ/cl/Message" logicalPath="//apple_ref/occ/cl/Message" target="_top">Message</a> object representing the message that
 was not understood.</p></dd>
 </dl>
 </div>
@@ -442,8 +442,20 @@ It may be used for pre-use initialisation. <!-- headerDoc=discussion;uid=//apple
 <div class="declaration_indent">
 <pre><!-- headerDoc=declaration;uid=//apple_ref/occ/clm/RtObject/instanceMethodFor:;name=start -->+ (<!-- a logicalPath="//apple_ref/occ/cl/IMP //apple_ref/occ/tdef/IMP //apple_ref/occ/tag/IMP //apple_ref/occ/struct/IMP //apple_ref/occ/intf/IMP //apple_ref/doc/anysymbol/IMP" machineGenerated="true" --><span class="type">IMP</span><!-- /a -->)<a machinegenerated="true" href="index.html#//apple_ref/occ/clm/RtObject/instanceMethodFor:" logicalPath="//apple_ref/occ/instm/RtObject/instanceMethodFor //apple_ref/occ/clm/RtObject/instanceMethodFor" target="_top"><span class="function">instanceMethodFor</span></a>:(<!-- a logicalPath="//apple_ref/occ/cl/SEL //apple_ref/occ/tdef/SEL //apple_ref/occ/tag/SEL //apple_ref/occ/struct/SEL //apple_ref/occ/intf/SEL //apple_ref/doc/anysymbol/SEL" machineGenerated="true" --><span class="type">SEL</span><!-- /a -->)<!-- a logicalPath="//apple_ref/occ/econst/aSelector //apple_ref/occ/data/RtObject/aSelector //apple_ref/occ/data/aSelector //apple_ref/occ/clconst/RtObject/aSelector " machineGenerated="true" --><span class="var">aSelector</span><!-- /a -->; <!-- headerDoc=declaration;uid=//apple_ref/occ/clm/RtObject/instanceMethodFor:;name=end --></pre>
 </div>
+<h5 class="tight"><font face="Lucida Grande,Helvetica,Arial">Parameters</font></h5>
+<div class="param_indent">
+<dl>
+<dt>
+<!-- headerDoc=methodparam;  uid=//apple_ref/doc/methodparam/RtObject/instanceMethodFor:/aSelector;  indexgroup=JX Runtime ;   name=instanceMethodFor:::aSelector -->
+<a name="//apple_ref/doc/methodparam/RtObject/instanceMethodFor:/aSelector"></a>
+<code>aSelector</code>
+</dt>
+<dd><p>The SEL to be looked up.</p></dd>
+</dl>
+</div>
 <h5 class="tight"><font face="Lucida Grande,Helvetica,Arial">Discussion</font></h5>
-<!-- begin discussion --><!-- headerDoc=discussion;uid=//apple_ref/occ/clm/RtObject/instanceMethodFor:;name=start --><p>Returns the IMP of a selector for an instance of this class. <!-- headerDoc=discussion;uid=//apple_ref/occ/clm/RtObject/instanceMethodFor:;name=end --><!-- end discussion -->
+<!-- begin discussion --><!-- headerDoc=discussion;uid=//apple_ref/occ/clm/RtObject/instanceMethodFor:;name=start --><p>Look up the IMP of a method for an instance of this class, by selector.
+<!-- headerDoc=discussion;uid=//apple_ref/occ/clm/RtObject/instanceMethodFor:;name=end --><!-- end discussion -->
 </p>
 <hr class="betweenAPIEntries">
 <!-- headerDoc=instm;  uid=//apple_ref/occ/instm/RtObject/methodFor:;  indexgroup=JX Runtime ;   name=RtObject::methodFor: --><a name="//apple_ref/occ/instm/RtObject/methodFor:"></a>
@@ -452,8 +464,20 @@ It may be used for pre-use initialisation. <!-- headerDoc=discussion;uid=//apple
 <div class="declaration_indent">
 <pre><!-- headerDoc=declaration;uid=//apple_ref/occ/instm/RtObject/methodFor:;name=start -->- (<!-- a logicalPath="//apple_ref/occ/cl/IMP //apple_ref/occ/tdef/IMP //apple_ref/occ/tag/IMP //apple_ref/occ/struct/IMP //apple_ref/occ/intf/IMP //apple_ref/doc/anysymbol/IMP" machineGenerated="true" --><span class="type">IMP</span><!-- /a -->)<a machinegenerated="true" href="index.html#//apple_ref/occ/instm/RtObject/methodFor:" logicalPath="//apple_ref/occ/instm/RtObject/methodFor" target="_top"><span class="function">methodFor</span></a>:(<!-- a logicalPath="//apple_ref/occ/cl/SEL //apple_ref/occ/tdef/SEL //apple_ref/occ/tag/SEL //apple_ref/occ/struct/SEL //apple_ref/occ/intf/SEL //apple_ref/doc/anysymbol/SEL" machineGenerated="true" --><span class="type">SEL</span><!-- /a -->)<!-- a logicalPath="//apple_ref/occ/econst/aSelector //apple_ref/occ/data/RtObject/aSelector //apple_ref/occ/data/aSelector //apple_ref/occ/clconst/RtObject/aSelector " machineGenerated="true" --><span class="var">aSelector</span><!-- /a -->; <!-- headerDoc=declaration;uid=//apple_ref/occ/instm/RtObject/methodFor:;name=end --></pre>
 </div>
+<h5 class="tight"><font face="Lucida Grande,Helvetica,Arial">Parameters</font></h5>
+<div class="param_indent">
+<dl>
+<dt>
+<!-- headerDoc=methodparam;  uid=//apple_ref/doc/methodparam/RtObject/methodFor:/aSelector;  indexgroup=JX Runtime ;   name=methodFor:::aSelector -->
+<a name="//apple_ref/doc/methodparam/RtObject/methodFor:/aSelector"></a>
+<code>aSelector</code>
+</dt>
+<dd><p>The SEL to be looked up.</p></dd>
+</dl>
+</div>
 <h5 class="tight"><font face="Lucida Grande,Helvetica,Arial">Discussion</font></h5>
-<!-- begin discussion --><!-- headerDoc=discussion;uid=//apple_ref/occ/instm/RtObject/methodFor:;name=start --><p>Returns the IMP of a selector for this object. <!-- headerDoc=discussion;uid=//apple_ref/occ/instm/RtObject/methodFor:;name=end --><!-- end discussion -->
+<!-- begin discussion --><!-- headerDoc=discussion;uid=//apple_ref/occ/instm/RtObject/methodFor:;name=start --><p>Look up a message with the object by selector.
+<!-- headerDoc=discussion;uid=//apple_ref/occ/instm/RtObject/methodFor:;name=end --><!-- end discussion -->
 </p>
 <hr class="betweenAPIEntries">
 <!-- headerDoc=clm;  uid=//apple_ref/occ/clm/RtObject/new;  indexgroup=JX Runtime ;   name=RtObject::new --><a name="//apple_ref/occ/clm/RtObject/new"></a>
