--- a/Runtime/index.html
+++ b/Runtime/index.html
@@ -47,17 +47,28 @@
 				
       <p class="groupname"><a name="group_JX_Runtime"></a><i>JX Runtime</i></p>
 <blockquote class="groupindent">
-<table border="0" cellpadding="1" cellspacing="0" width="420"><tr>
+<table border="0" cellpadding="1" cellspacing="0" width="420">
+<tr>
+<td width="33%">
+<a name="group_JX_Runtime_class_BL" href="Block_h/Classes/Block/index.html">Block</a><br>
+</td>
 <td width="33%">
 <a name="group_JX_Runtime_class_OB" href="Object_h/Classes/Object/index.html">Object</a><br>
 </td>
 <td width="33%">
-<a name="group_JX_Runtime_class_PR" href="Proxy_h/Classes/Proxy/index.html">Proxy</a><br>
-</td>
-<td width="33%">
 <a name="group_JX_Runtime_class_RT" href="RtObject_h/Classes/RtObject/index.html">RtObject</a><br>
 </td>
-</tr></table>
+</tr>
+<tr>
+<td width="33%">
+<a name="group_JX_Runtime_class_ME" href="Message_h/Classes/Message/index.html">Message</a><br>
+</td>
+<td width="33%">
+<a name="group_JX_Runtime_class_PR" href="Proxy_h/Classes/Proxy/index.html">Proxy</a><br>
+</td>
+<td width="33%"></td>
+</tr>
+</table>
 </blockquote>
 
 			</td></tr>
