--- a/Runtime/Object_h/Classes/Object/index.html
+++ b/Runtime/Object_h/Classes/Object/index.html
@@ -423,9 +423,14 @@ nil.
 <div class="declaration_indent">
 <pre><!-- headerDoc=declaration;uid=//apple_ref/occ/instm/Object/hash;name=start -->- (<!-- a logicalPath="//apple_ref/occ/cl/uintptr_t //apple_ref/occ/tdef/uintptr_t //apple_ref/occ/tag/uintptr_t //apple_ref/occ/struct/uintptr_t //apple_ref/occ/intf/uintptr_t //apple_ref/doc/anysymbol/uintptr_t" machineGenerated="true" --><span class="type">uintptr_t</span><!-- /a -->)<!-- a logicalPath="//apple_ref/occ/econst/hash //apple_ref/occ/data/Object/hash //apple_ref/occ/data/hash //apple_ref/occ/clconst/Object/hash " machineGenerated="true" --><span class="var">hash</span><!-- /a -->; <!-- headerDoc=declaration;uid=//apple_ref/occ/instm/Object/hash;name=end --></pre>
 </div>
+<h5 class="tight"><font face="Lucida Grande,Helvetica,Arial">Return Value</font></h5>
+<p><!-- begin return value --></p>
+<p>The object's unique hash.
+
+<!-- end return value --></p>
 <h5 class="tight"><font face="Lucida Grande,Helvetica,Arial">Discussion</font></h5>
-<!-- begin discussion --><!-- headerDoc=discussion;uid=//apple_ref/occ/instm/Object/hash;name=start --><p>Returns the unique hash of an object. By default, returns the object's
-address. <!-- headerDoc=discussion;uid=//apple_ref/occ/instm/Object/hash;name=end --><!-- end discussion -->
+<!-- begin discussion --><!-- headerDoc=discussion;uid=//apple_ref/occ/instm/Object/hash;name=start --><p>Retrieve the unique hash of an object.
+<!-- headerDoc=discussion;uid=//apple_ref/occ/instm/Object/hash;name=end --><!-- end discussion -->
 </p>
 <hr class="betweenAPIEntries">
 <!-- headerDoc=clm;  uid=//apple_ref/occ/clm/Object/inheritsFrom:;  indexgroup=JX Runtime ;   name=Object::inheritsFrom: --><a name="//apple_ref/occ/clm/Object/inheritsFrom:"></a>
@@ -460,9 +465,25 @@ address. <!-- headerDoc=discussion;uid=//apple_ref/occ/instm/Object/hash;name=en
 <div class="declaration_indent">
 <pre><!-- headerDoc=declaration;uid=//apple_ref/occ/instm/Object/isEqual:;name=start -->- (<!-- a logicalPath="//apple_ref/occ/cl/BOOL //apple_ref/occ/tdef/BOOL //apple_ref/occ/tag/BOOL //apple_ref/occ/struct/BOOL //apple_ref/occ/intf/BOOL //apple_ref/doc/anysymbol/BOOL" machineGenerated="true" --><span class="type">BOOL</span><!-- /a -->)<a machinegenerated="true" href="index.html#//apple_ref/occ/instm/Object/isEqual:" logicalPath="//apple_ref/occ/instm/Object/isEqual" target="_top"><span class="function">isEqual</span></a>:<!-- a logicalPath="//apple_ref/occ/econst/anObject //apple_ref/occ/data/Object/anObject //apple_ref/occ/data/anObject //apple_ref/occ/clconst/Object/anObject " machineGenerated="true" --><span class="var">anObject</span><!-- /a -->; <!-- headerDoc=declaration;uid=//apple_ref/occ/instm/Object/isEqual:;name=end --></pre>
 </div>
+<h5 class="tight"><font face="Lucida Grande,Helvetica,Arial">Parameters</font></h5>
+<div class="param_indent">
+<dl>
+<dt>
+<!-- headerDoc=methodparam;  uid=//apple_ref/doc/methodparam/Object/isEqual:/anObject;  indexgroup=JX Runtime ;   name=isEqual:::anObject -->
+<a name="//apple_ref/doc/methodparam/Object/isEqual:/anObject"></a>
+<code>anObject</code>
+</dt>
+<dd><p>The object to compare with.</p></dd>
+</dl>
+</div>
+<h5 class="tight"><font face="Lucida Grande,Helvetica,Arial">Return Value</font></h5>
+<p><!-- begin return value --></p>
+<p>By default, YES if pointer addresses are equal; NO if not.
+
+<!-- end return value --></p>
 <h5 class="tight"><font face="Lucida Grande,Helvetica,Arial">Discussion</font></h5>
-<!-- begin discussion --><!-- headerDoc=discussion;uid=//apple_ref/occ/instm/Object/isEqual:;name=start --><p>Compares an object to another object. By default, returns YES if the
-objects have the same address. Otherwise, returns NO. <!-- headerDoc=discussion;uid=//apple_ref/occ/instm/Object/isEqual:;name=end --><!-- end discussion -->
+<!-- begin discussion --><!-- headerDoc=discussion;uid=//apple_ref/occ/instm/Object/isEqual:;name=start --><p>Checks if two objects are equal.
+<!-- headerDoc=discussion;uid=//apple_ref/occ/instm/Object/isEqual:;name=end --><!-- end discussion -->
 </p>
 <hr class="betweenAPIEntries">
 <!-- headerDoc=clm;  uid=//apple_ref/occ/clm/Object/isEqual:;  indexgroup=JX Runtime ;   name=Object::isEqual: --><a name="//apple_ref/occ/clm/Object/isEqual:"></a>
@@ -471,9 +492,25 @@ objects have the same address. Otherwise, returns NO. <!-- headerDoc=discussion;
 <div class="declaration_indent">
 <pre><!-- headerDoc=declaration;uid=//apple_ref/occ/clm/Object/isEqual:;name=start -->+ (<!-- a logicalPath="//apple_ref/occ/cl/BOOL //apple_ref/occ/tdef/BOOL //apple_ref/occ/tag/BOOL //apple_ref/occ/struct/BOOL //apple_ref/occ/intf/BOOL //apple_ref/doc/anysymbol/BOOL" machineGenerated="true" --><span class="type">BOOL</span><!-- /a -->)<a machinegenerated="true" href="index.html#//apple_ref/occ/instm/Object/isEqual:" logicalPath="//apple_ref/occ/instm/Object/isEqual" target="_top"><span class="function">isEqual</span></a>:<!-- a logicalPath="//apple_ref/occ/econst/anObject //apple_ref/occ/data/Object/anObject //apple_ref/occ/data/anObject //apple_ref/occ/clconst/Object/anObject " machineGenerated="true" --><span class="var">anObject</span><!-- /a -->; <!-- headerDoc=declaration;uid=//apple_ref/occ/clm/Object/isEqual:;name=end --></pre>
 </div>
+<h5 class="tight"><font face="Lucida Grande,Helvetica,Arial">Parameters</font></h5>
+<div class="param_indent">
+<dl>
+<dt>
+<!-- headerDoc=methodparam;  uid=//apple_ref/doc/methodparam/Object/isEqual:/anObject;  indexgroup=JX Runtime ;   name=isEqual:::anObject -->
+<a name="//apple_ref/doc/methodparam/Object/isEqual:/anObject"></a>
+<code>anObject</code>
+</dt>
+<dd><p>The class to compare with.</p></dd>
+</dl>
+</div>
+<h5 class="tight"><font face="Lucida Grande,Helvetica,Arial">Return Value</font></h5>
+<p><!-- begin return value --></p>
+<p>By default, YES if pointer addresses are equal; NO if not.
+
+<!-- end return value --></p>
 <h5 class="tight"><font face="Lucida Grande,Helvetica,Arial">Discussion</font></h5>
-<!-- begin discussion --><!-- headerDoc=discussion;uid=//apple_ref/occ/clm/Object/isEqual:;name=start --><p>Compares a class to another class. By default, returns YES if the
-classes have the same address. Otherwise, returns NO. <!-- headerDoc=discussion;uid=//apple_ref/occ/clm/Object/isEqual:;name=end --><!-- end discussion -->
+<!-- begin discussion --><!-- headerDoc=discussion;uid=//apple_ref/occ/clm/Object/isEqual:;name=start --><p>Checks if two classes are the same.
+<!-- headerDoc=discussion;uid=//apple_ref/occ/clm/Object/isEqual:;name=end --><!-- end discussion -->
 </p>
 <hr class="betweenAPIEntries">
 <!-- headerDoc=instm;  uid=//apple_ref/occ/instm/Object/isKindOf:;  indexgroup=JX Runtime ;   name=Object::isKindOf: --><a name="//apple_ref/occ/instm/Object/isKindOf:"></a>
@@ -536,9 +573,25 @@ instance of a subclass or otherwise.
 <div class="declaration_indent">
 <pre><!-- headerDoc=declaration;uid=//apple_ref/occ/instm/Object/isSame:;name=start -->- (<!-- a logicalPath="//apple_ref/occ/cl/BOOL //apple_ref/occ/tdef/BOOL //apple_ref/occ/tag/BOOL //apple_ref/occ/struct/BOOL //apple_ref/occ/intf/BOOL //apple_ref/doc/anysymbol/BOOL" machineGenerated="true" --><span class="type">BOOL</span><!-- /a -->)<a machinegenerated="true" href="index.html#//apple_ref/occ/instm/Object/isSame:" logicalPath="//apple_ref/occ/instm/Object/isSame" target="_top"><span class="function">isSame</span></a>:<!-- a logicalPath="//apple_ref/occ/econst/anObject //apple_ref/occ/data/Object/anObject //apple_ref/occ/data/anObject //apple_ref/occ/clconst/Object/anObject " machineGenerated="true" --><span class="var">anObject</span><!-- /a -->; <!-- headerDoc=declaration;uid=//apple_ref/occ/instm/Object/isSame:;name=end --></pre>
 </div>
+<h5 class="tight"><font face="Lucida Grande,Helvetica,Arial">Parameters</font></h5>
+<div class="param_indent">
+<dl>
+<dt>
+<!-- headerDoc=methodparam;  uid=//apple_ref/doc/methodparam/Object/isSame:/anObject;  indexgroup=JX Runtime ;   name=isSame:::anObject -->
+<a name="//apple_ref/doc/methodparam/Object/isSame:/anObject"></a>
+<code>anObject</code>
+</dt>
+<dd><p>The object to compare with.</p></dd>
+</dl>
+</div>
+<h5 class="tight"><font face="Lucida Grande,Helvetica,Arial">Return Value</font></h5>
+<p><!-- begin return value --></p>
+<p>YES if pointer addresses are equal; NO if not.
+
+<!-- end return value --></p>
 <h5 class="tight"><font face="Lucida Grande,Helvetica,Arial">Discussion</font></h5>
-<!-- begin discussion --><!-- headerDoc=discussion;uid=//apple_ref/occ/instm/Object/isSame:;name=start --><p>Checks if two objects are the same. Returns YES if their addresses are
-are equal. <!-- headerDoc=discussion;uid=//apple_ref/occ/instm/Object/isSame:;name=end --><!-- end discussion -->
+<!-- begin discussion --><!-- headerDoc=discussion;uid=//apple_ref/occ/instm/Object/isSame:;name=start --><p>Checks if two objects are the same.
+<!-- headerDoc=discussion;uid=//apple_ref/occ/instm/Object/isSame:;name=end --><!-- end discussion -->
 </p>
 <hr class="betweenAPIEntries">
 <!-- headerDoc=clm;  uid=//apple_ref/occ/clm/Object/isSubclassOf:;  indexgroup=JX Runtime ;   name=Object::isSubclassOf: --><a name="//apple_ref/occ/clm/Object/isSubclassOf:"></a>
@@ -805,7 +858,7 @@ of the object's class. <!-- headerDoc=discussion;uid=//apple_ref/occ/instm/Objec
 <h3><a name="subclass:">subclass:</a></h3>
 <hr class="afterName">
 <div class="declaration_indent">
-<pre><!-- headerDoc=declaration;uid=//apple_ref/occ/clm/Object/subclass:;name=start -->+ (<!-- a logicalPath="//apple_ref/occ/cl/id //apple_ref/occ/tdef/id //apple_ref/occ/tag/id //apple_ref/occ/struct/id //apple_ref/occ/intf/id //apple_ref/doc/anysymbol/id" machineGenerated="true" --><span class="type">id</span><!-- /a -->)<a machinegenerated="true" href="index.html#//apple_ref/occ/clm/Object/subclass:" logicalPath="//apple_ref/occ/instm/Object/subclass //apple_ref/occ/clm/Object/subclass" target="_top"><span class="function">subclass</span></a>:(<!-- a logicalPath="//apple_ref/occ/cl/STR //apple_ref/occ/tdef/STR //apple_ref/occ/tag/STR //apple_ref/occ/struct/STR //apple_ref/occ/intf/STR //apple_ref/doc/anysymbol/STR" machineGenerated="true" --><span class="type">STR</span><!-- /a -->)<!-- a logicalPath="//apple_ref/occ/econst/name //apple_ref/occ/data/Object/name //apple_ref/occ/data/name //apple_ref/occ/clconst/Object/name " machineGenerated="true" --><span class="var">name</span><!-- /a -->; <!-- headerDoc=declaration;uid=//apple_ref/occ/clm/Object/subclass:;name=end --></pre>
+<pre><!-- headerDoc=declaration;uid=//apple_ref/occ/clm/Object/subclass:;name=start -->+ (<!-- a logicalPath="//apple_ref/occ/cl/id //apple_ref/occ/tdef/id //apple_ref/occ/tag/id //apple_ref/occ/struct/id //apple_ref/occ/intf/id //apple_ref/doc/anysymbol/id" machineGenerated="true" --><span class="type">id</span><!-- /a -->)<a machinegenerated="true" href="index.html#//apple_ref/occ/clm/Object/subclass:ivars:cvars:" logicalPath="//apple_ref/occ/instm/Object/subclass //apple_ref/occ/clm/Object/subclass" target="_top"><span class="function">subclass</span></a>:(<!-- a logicalPath="//apple_ref/occ/cl/STR //apple_ref/occ/tdef/STR //apple_ref/occ/tag/STR //apple_ref/occ/struct/STR //apple_ref/occ/intf/STR //apple_ref/doc/anysymbol/STR" machineGenerated="true" --><span class="type">STR</span><!-- /a -->)<!-- a logicalPath="//apple_ref/occ/econst/name //apple_ref/occ/data/Object/name //apple_ref/occ/data/name //apple_ref/occ/clconst/Object/name " machineGenerated="true" --><span class="var">name</span><!-- /a -->; <!-- headerDoc=declaration;uid=//apple_ref/occ/clm/Object/subclass:;name=end --></pre>
 </div>
 <h5 class="tight"><font face="Lucida Grande,Helvetica,Arial">Parameters</font></h5>
 <div class="param_indent">
@@ -833,7 +886,7 @@ programme.
 <h3><a name="subclass:ivars:cvars:">subclass:ivars:cvars:</a></h3>
 <hr class="afterName">
 <div class="declaration_indent">
-<pre><!-- headerDoc=declaration;uid=//apple_ref/occ/clm/Object/subclass:ivars:cvars:;name=start -->+ (<!-- a logicalPath="//apple_ref/occ/cl/id //apple_ref/occ/tdef/id //apple_ref/occ/tag/id //apple_ref/occ/struct/id //apple_ref/occ/intf/id //apple_ref/doc/anysymbol/id" machineGenerated="true" --><span class="type">id</span><!-- /a -->)<a machinegenerated="true" href="index.html#//apple_ref/occ/clm/Object/subclass:" logicalPath="//apple_ref/occ/instm/Object/subclass //apple_ref/occ/clm/Object/subclass" target="_top"><span class="function">subclass</span></a>:(<!-- a logicalPath="//apple_ref/occ/cl/STR //apple_ref/occ/tdef/STR //apple_ref/occ/tag/STR //apple_ref/occ/struct/STR //apple_ref/occ/intf/STR //apple_ref/doc/anysymbol/STR" machineGenerated="true" --><span class="type">STR</span><!-- /a -->)<a machinegenerated="true" href="index.html#//apple_ref/occ/instm/Object/name" logicalPath="//apple_ref/occ/instm/Object/name" target="_top"><span class="function">name</span></a>:(<!-- a logicalPath="//apple_ref/occ/cl/int //apple_ref/occ/tdef/int //apple_ref/occ/tag/int //apple_ref/occ/struct/int //apple_ref/occ/intf/int //apple_ref/doc/anysymbol/int" machineGenerated="true" --><span class="type">int</span><!-- /a -->)<a machinegenerated="true" href="index.html#//apple_ref/doc/methodparam/Object/subclass:ivars:cvars:/ivars" logicalPath="//apple_ref/occ/instm/Object/ivars //apple_ref/occ/clm/Object/ivars //apple_ref/occ/intfcm/Object/ivars //apple_ref/occ/intfm/Object/ivars //apple_ref/occ/func/ivars //apple_ref/occ/ftmplt/Object/ivars //apple_ref/occ/defn/ivars //apple_ref/occ/macro/ivars //apple_ref/doc/anysymbol/ivars" target="_top"><span class="function">ivars</span></a>:(<!-- a logicalPath="//apple_ref/occ/cl/int //apple_ref/occ/tdef/int //apple_ref/occ/tag/int //apple_ref/occ/struct/int //apple_ref/occ/intf/int //apple_ref/doc/anysymbol/int" machineGenerated="true" --><span class="type">int</span><!-- /a -->)<!-- a logicalPath="//apple_ref/occ/econst/cvars //apple_ref/occ/data/Object/cvars //apple_ref/occ/data/cvars //apple_ref/occ/clconst/Object/cvars " machineGenerated="true" --><span class="var">cvars</span><!-- /a -->; <!-- headerDoc=declaration;uid=//apple_ref/occ/clm/Object/subclass:ivars:cvars:;name=end --></pre>
+<pre><!-- headerDoc=declaration;uid=//apple_ref/occ/clm/Object/subclass:ivars:cvars:;name=start -->+ (<!-- a logicalPath="//apple_ref/occ/cl/id //apple_ref/occ/tdef/id //apple_ref/occ/tag/id //apple_ref/occ/struct/id //apple_ref/occ/intf/id //apple_ref/doc/anysymbol/id" machineGenerated="true" --><span class="type">id</span><!-- /a -->)<a machinegenerated="true" href="index.html#//apple_ref/occ/clm/Object/subclass:ivars:cvars:" logicalPath="//apple_ref/occ/instm/Object/subclass //apple_ref/occ/clm/Object/subclass" target="_top"><span class="function">subclass</span></a>:(<!-- a logicalPath="//apple_ref/occ/cl/STR //apple_ref/occ/tdef/STR //apple_ref/occ/tag/STR //apple_ref/occ/struct/STR //apple_ref/occ/intf/STR //apple_ref/doc/anysymbol/STR" machineGenerated="true" --><span class="type">STR</span><!-- /a -->)<a machinegenerated="true" href="index.html#//apple_ref/occ/instm/Object/name" logicalPath="//apple_ref/occ/instm/Object/name" target="_top"><span class="function">name</span></a>:(<!-- a logicalPath="//apple_ref/occ/cl/int //apple_ref/occ/tdef/int //apple_ref/occ/tag/int //apple_ref/occ/struct/int //apple_ref/occ/intf/int //apple_ref/doc/anysymbol/int" machineGenerated="true" --><span class="type">int</span><!-- /a -->)<a machinegenerated="true" href="index.html#//apple_ref/doc/methodparam/Object/subclass:ivars:cvars:/ivars" logicalPath="//apple_ref/occ/instm/Object/ivars //apple_ref/occ/clm/Object/ivars //apple_ref/occ/intfcm/Object/ivars //apple_ref/occ/intfm/Object/ivars //apple_ref/occ/func/ivars //apple_ref/occ/ftmplt/Object/ivars //apple_ref/occ/defn/ivars //apple_ref/occ/macro/ivars //apple_ref/doc/anysymbol/ivars" target="_top"><span class="function">ivars</span></a>:(<!-- a logicalPath="//apple_ref/occ/cl/int //apple_ref/occ/tdef/int //apple_ref/occ/tag/int //apple_ref/occ/struct/int //apple_ref/occ/intf/int //apple_ref/doc/anysymbol/int" machineGenerated="true" --><span class="type">int</span><!-- /a -->)<!-- a logicalPath="//apple_ref/occ/econst/cvars //apple_ref/occ/data/Object/cvars //apple_ref/occ/data/cvars //apple_ref/occ/clconst/Object/cvars " machineGenerated="true" --><span class="var">cvars</span><!-- /a -->; <!-- headerDoc=declaration;uid=//apple_ref/occ/clm/Object/subclass:ivars:cvars:;name=end --></pre>
 </div>
 <h5 class="tight"><font face="Lucida Grande,Helvetica,Arial">Parameters</font></h5>
 <div class="param_indent">
