Improve Block documentation, add Exception documentation.

--- a/Runtime/index.html
+++ b/Runtime/index.html
@@ -53,20 +53,22 @@
 <a name="group_JX_Runtime_class_BL" href="Block_h/Classes/Block/index.html">Block</a><br>
 </td>
 <td width="33%">
-<a name="group_JX_Runtime_class_OB" href="Object_h/Classes/Object/index.html">Object</a><br>
-</td>
-<td width="33%">
-<a name="group_JX_Runtime_class_RT" href="RtObject_h/Classes/RtObject/index.html">RtObject</a><br>
-</td>
-</tr>
-<tr>
-<td width="33%">
 <a name="group_JX_Runtime_class_ME" href="Message_h/Classes/Message/index.html">Message</a><br>
 </td>
 <td width="33%">
 <a name="group_JX_Runtime_class_PR" href="Proxy_h/Classes/Proxy/index.html">Proxy</a><br>
 </td>
-<td width="33%"></td>
+</tr>
+<tr>
+<td width="33%">
+<a name="group_JX_Runtime_class_EX" href="Exceptn_h/Classes/Exception/index.html">Exception</a><br>
+</td>
+<td width="33%">
+<a name="group_JX_Runtime_class_OB" href="Object_h/Classes/Object/index.html">Object</a><br>
+</td>
+<td width="33%">
+<a name="group_JX_Runtime_class_RT" href="RtObject_h/Classes/RtObject/index.html">RtObject</a><br>
+</td>
 </tr>
 </table>
 </blockquote>
