Fix a bug in the original docs.

--- a/Runtime/Block_h/Classes/Block/toc.html
+++ b/Runtime/Block_h/Classes/Block/toc.html
@@ -44,19 +44,25 @@
 </td>
 </tr></table>
 <div toc="collapsible" class="collapsible">
+<span class="hd_tocGroup">Calling the block </span>
 <span class="hd_tocAccess">Instance Methods</span>
 <ul class="tocSubEntryList">
 <!-- instance method --><li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/Block/atExit" target="_top">atExit</a></li>
-<li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/Block/ifError:" target="_top">ifError:</a></li>
 <li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/Block/intvalue" target="_top">intvalue</a></li>
 <li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/Block/intvalue:" target="_top">intvalue:</a></li>
 <li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/Block/intvalue:value:" target="_top">intvalue:value:</a></li>
-<li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/Block/on:do:" target="_top">on:do:</a></li>
 <li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/Block/value" target="_top">value</a></li>
 <li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/Block/value:" target="_top">value:</a></li>
+<li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/Block/value:value:" target="_top">value:value:</a></li>
+</ul>
+<span class="hd_tocGroupSpace">&nbsp;<br></span>
+<span class="hd_tocGroup">Calling with exception handling </span>
+<span class="hd_tocAccess">Instance Methods</span>
+<ul class="tocSubEntryList">
+<!-- instance method --><li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/Block/ifError:" target="_top">ifError:</a></li>
+<li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/Block/on:do:" target="_top">on:do:</a></li>
 <li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/Block/value:ifError:" target="_top">value:ifError:</a></li>
 <li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/Block/value:on:do:" target="_top">value:on:do:</a></li>
-<li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/Block/value:value:" target="_top">value:value:</a></li>
 </ul>
 </div>
 </div>
