--- a/Runtime/Exceptn_h/Classes/Exception/toc.html
+++ b/Runtime/Exceptn_h/Classes/Exception/toc.html
@@ -47,6 +47,7 @@
 <span class="hd_tocAccess">Class Methods</span>
 <ul class="tocSubEntryList">
 <!-- class method --><li class="tocSubEntry"><a href="index.html#//apple_ref/occ/clm/Exception/signal" target="_top">signal</a></li>
+<li class="tocSubEntry"><a href="index.html#//apple_ref/occ/clm/Exception/signal:" target="_top">signal:</a></li>
 </ul>
 <span class="hd_tocAccessSpace">&nbsp;<br></span>
 <span class="hd_tocAccess">Instance Methods</span>
