--- a/Runtime/Exceptn_h/Classes/Exception/index.html
+++ b/Runtime/Exceptn_h/Classes/Exception/index.html
@@ -286,6 +286,8 @@ single parameter.
 <dd></dd>
 <dt><tt><a href="index.html#//apple_ref/occ/clm/Exception/signal" target="_top">+signal</a></tt></dt>
 <dd></dd>
+<dt><tt><a href="index.html#//apple_ref/occ/clm/Exception/signal:" target="_top">+signal:</a></tt></dt>
+<dd></dd>
 </dl>
 <hr class="betweenAPIEntries">
 <!-- headerDoc=instm;  uid=//apple_ref/occ/instm/Exception/resignalAs:;  indexgroup=JX Runtime ;   name=Exception::resignalAs: --><a name="//apple_ref/occ/instm/Exception/resignalAs:"></a>
@@ -302,11 +304,11 @@ single parameter.
 <a name="//apple_ref/doc/methodparam/Exception/resignalAs:/replacementException"></a>
 <code>replacementException</code>
 </dt>
-<dd><p>Exception message STR.</p></dd>
+<dd><p>Replacement Exception instance.</p></dd>
 </dl>
 </div>
 <h5 class="tight"><font face="Lucida Grande,Helvetica,Arial">Discussion</font></h5>
-<!-- begin discussion --><!-- headerDoc=discussion;uid=//apple_ref/occ/instm/Exception/resignalAs:;name=start --><p>Resignals a new exception with another Exception instance.
+<!-- begin discussion --><!-- headerDoc=discussion;uid=//apple_ref/occ/instm/Exception/resignalAs:;name=start --><p>Resignals the exception with another Exception instance.
 <!-- headerDoc=discussion;uid=//apple_ref/occ/instm/Exception/resignalAs:;name=end --><!-- end discussion -->
 </p>
 <hr class="betweenAPIEntries">
@@ -318,6 +320,28 @@ single parameter.
 </div>
 <h5 class="tight"><font face="Lucida Grande,Helvetica,Arial">Discussion</font></h5>
 <!-- begin discussion --><!-- headerDoc=discussion;uid=//apple_ref/occ/clm/Exception/signal;name=start --><p>Signals a new exception. <!-- headerDoc=discussion;uid=//apple_ref/occ/clm/Exception/signal;name=end --><!-- end discussion -->
+</p>
+<hr class="betweenAPIEntries">
+<!-- headerDoc=clm;  uid=//apple_ref/occ/clm/Exception/signal:;  indexgroup=JX Runtime ;   name=Exception::signal: --><a name="//apple_ref/occ/clm/Exception/signal:"></a>
+<h3><a name="signal:">signal:</a></h3>
+<hr class="afterName">
+<div class="declaration_indent">
+<pre><!-- headerDoc=declaration;uid=//apple_ref/occ/clm/Exception/signal:;name=start -->+ (<!-- a logicalPath="//apple_ref/occ/cl/id //apple_ref/occ/tdef/id //apple_ref/occ/tag/id //apple_ref/occ/struct/id //apple_ref/occ/intf/id //apple_ref/doc/anysymbol/id" machineGenerated="true" --><span class="type">id</span><!-- /a -->)<a machinegenerated="true" href="index.html#//apple_ref/occ/clm/Exception/signal" logicalPath="//apple_ref/occ/instm/Exception/signal //apple_ref/occ/clm/Exception/signal" target="_top"><span class="function">signal</span></a>:(<!-- a logicalPath="//apple_ref/occ/cl/STR //apple_ref/occ/tdef/STR //apple_ref/occ/tag/STR //apple_ref/occ/struct/STR //apple_ref/occ/intf/STR //apple_ref/doc/anysymbol/STR" machineGenerated="true" --><span class="type">STR</span><!-- /a -->)<!-- a logicalPath="//apple_ref/occ/econst/message //apple_ref/occ/data/Exception/message //apple_ref/occ/data/message //apple_ref/occ/clconst/Exception/message " machineGenerated="true" --><span class="var">message</span><!-- /a -->; <!-- headerDoc=declaration;uid=//apple_ref/occ/clm/Exception/signal:;name=end --></pre>
+</div>
+<h5 class="tight"><font face="Lucida Grande,Helvetica,Arial">Parameters</font></h5>
+<div class="param_indent">
+<dl>
+<dt>
+<!-- headerDoc=methodparam;  uid=//apple_ref/doc/methodparam/Exception/signal:/message;  indexgroup=JX Runtime ;   name=signal:::message -->
+<a name="//apple_ref/doc/methodparam/Exception/signal:/message"></a>
+<code>message</code>
+</dt>
+<dd><p>Exception message STR.</p></dd>
+</dl>
+</div>
+<h5 class="tight"><font face="Lucida Grande,Helvetica,Arial">Discussion</font></h5>
+<!-- begin discussion --><!-- headerDoc=discussion;uid=//apple_ref/occ/clm/Exception/signal:;name=start --><p>Signals a new exception with an STR message.
+<!-- headerDoc=discussion;uid=//apple_ref/occ/clm/Exception/signal:;name=end --><!-- end discussion -->
 </p>
 <p class="gapBeforeFooter">&nbsp;</p>
 <hr class="afterFooter">
