Improve Runtime docs, add ObjectKit docs.

--- a/Runtime/Exceptn_h/Classes/Exception/index.html
+++ b/Runtime/Exceptn_h/Classes/Exception/index.html
@@ -326,7 +326,7 @@ single parameter.
 <h3><a name="signal:">signal:</a></h3>
 <hr class="afterName">
 <div class="declaration_indent">
-<pre><!-- headerDoc=declaration;uid=//apple_ref/occ/clm/Exception/signal:;name=start -->+ (<!-- a logicalPath="//apple_ref/occ/cl/id //apple_ref/occ/tdef/id //apple_ref/occ/tag/id //apple_ref/occ/struct/id //apple_ref/occ/intf/id //apple_ref/doc/anysymbol/id" machineGenerated="true" --><span class="type">id</span><!-- /a -->)<a machinegenerated="true" href="index.html#//apple_ref/occ/clm/Exception/signal" logicalPath="//apple_ref/occ/instm/Exception/signal //apple_ref/occ/clm/Exception/signal" target="_top"><span class="function">signal</span></a>:(<!-- a logicalPath="//apple_ref/occ/cl/STR //apple_ref/occ/tdef/STR //apple_ref/occ/tag/STR //apple_ref/occ/struct/STR //apple_ref/occ/intf/STR //apple_ref/doc/anysymbol/STR" machineGenerated="true" --><span class="type">STR</span><!-- /a -->)<!-- a logicalPath="//apple_ref/occ/econst/message //apple_ref/occ/data/Exception/message //apple_ref/occ/data/message //apple_ref/occ/clconst/Exception/message " machineGenerated="true" --><span class="var">message</span><!-- /a -->; <!-- headerDoc=declaration;uid=//apple_ref/occ/clm/Exception/signal:;name=end --></pre>
+<pre><!-- headerDoc=declaration;uid=//apple_ref/occ/clm/Exception/signal:;name=start -->+ (<!-- a logicalPath="//apple_ref/occ/cl/id //apple_ref/occ/tdef/id //apple_ref/occ/tag/id //apple_ref/occ/struct/id //apple_ref/occ/intf/id //apple_ref/doc/anysymbol/id" machineGenerated="true" --><span class="type">id</span><!-- /a -->)<a machinegenerated="true" href="index.html#//apple_ref/occ/clm/Exception/signal:" logicalPath="//apple_ref/occ/instm/Exception/signal //apple_ref/occ/clm/Exception/signal" target="_top"><span class="function">signal</span></a>:(<!-- a logicalPath="//apple_ref/occ/cl/STR //apple_ref/occ/tdef/STR //apple_ref/occ/tag/STR //apple_ref/occ/struct/STR //apple_ref/occ/intf/STR //apple_ref/doc/anysymbol/STR" machineGenerated="true" --><span class="type">STR</span><!-- /a -->)<!-- a logicalPath="//apple_ref/occ/econst/message //apple_ref/occ/data/Exception/message //apple_ref/occ/data/message //apple_ref/occ/clconst/Exception/message " machineGenerated="true" --><span class="var">message</span><!-- /a -->; <!-- headerDoc=declaration;uid=//apple_ref/occ/clm/Exception/signal:;name=end --></pre>
 </div>
 <h5 class="tight"><font face="Lucida Grande,Helvetica,Arial">Parameters</font></h5>
 <div class="param_indent">
@@ -347,7 +347,7 @@ single parameter.
 <hr class="afterFooter">
 <div class="hd_copyright_and_timestamp">
 <p class="hd_copyright">&copy; David Mackay </p>
-<p class="hd_timestamp">Last Updated: Saturday, January 09, 2016
+<p class="hd_timestamp">Last Updated: Sunday, January 10, 2016
 </p>
 </div>
 </td>
