Improve OrdCltn docs.

--- a/ObjectKit/OrdCltn_h/Classes/OrdCltn/toc.html
+++ b/ObjectKit/OrdCltn_h/Classes/OrdCltn/toc.html
@@ -44,14 +44,40 @@
 </td>
 </tr></table>
 <div toc="collapsible" class="collapsible">
-<span class="hd_tocGroup">Inquiry </span>
+<span class="hd_tocGroup">Adding </span>
+<span class="hd_tocAccess">Instance Methods</span>
+<ul class="tocSubEntryList">
+<!-- instance method --><li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/OrdCltn/add:" target="_top">add:</a></li>
+<li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/OrdCltn/addFirst:" target="_top">addFirst:</a></li>
+<li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/OrdCltn/addIfAbsent:" target="_top">addIfAbsent:</a></li>
+<li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/OrdCltn/addIfAbsentMatching:" target="_top">addIfAbsentMatching:</a></li>
+<li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/OrdCltn/at:insert:" target="_top">at:insert:</a></li>
+<li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/OrdCltn/insert:after:" target="_top">insert:after:</a></li>
+<li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/OrdCltn/insert:before:" target="_top">insert:before:</a></li>
+</ul>
+<span class="hd_tocGroupSpace">&nbsp;<br></span>
+<span class="hd_tocGroup">Enumeration </span>
 <span class="hd_tocAccess">Instance Methods</span>
 <ul class="tocSubEntryList">
 <!-- instance method --><li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/OrdCltn/do:" target="_top">do:</a></li>
 <li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/OrdCltn/do:until:" target="_top">do:until:</a></li>
-<li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/OrdCltn/isEmpty" target="_top">isEmpty</a></li>
-<li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/OrdCltn/lastOffset" target="_top">lastOffset</a></li>
 <li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/OrdCltn/reverseDo:" target="_top">reverseDo:</a></li>
+</ul>
+<span class="hd_tocGroupSpace">&nbsp;<br></span>
+<span class="hd_tocGroup">Indexed retrieval </span>
+<span class="hd_tocAccess">Instance Methods</span>
+<ul class="tocSubEntryList">
+<!-- instance method --><li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/OrdCltn/after:" target="_top">after:</a></li>
+<li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/OrdCltn/at:" target="_top">at:</a></li>
+<li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/OrdCltn/at:put:" target="_top">at:put:</a></li>
+<li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/OrdCltn/before:" target="_top">before:</a></li>
+</ul>
+<span class="hd_tocGroupSpace">&nbsp;<br></span>
+<span class="hd_tocGroup">Inquiry </span>
+<span class="hd_tocAccess">Instance Methods</span>
+<ul class="tocSubEntryList">
+<!-- instance method --><li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/OrdCltn/isEmpty" target="_top">isEmpty</a></li>
+<li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/OrdCltn/lastOffset" target="_top">lastOffset</a></li>
 <li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/OrdCltn/size" target="_top">size</a></li>
 </ul>
 <span class="hd_tocGroupSpace">&nbsp;<br></span>
@@ -60,6 +86,16 @@
 <ul class="tocSubEntryList">
 <!-- instance method --><li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/OrdCltn/copy" target="_top">copy</a></li>
 <li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/OrdCltn/deepCopy" target="_top">deepCopy</a></li>
+</ul>
+<span class="hd_tocGroupSpace">&nbsp;<br></span>
+<span class="hd_tocGroup">Removal </span>
+<span class="hd_tocAccess">Instance Methods</span>
+<ul class="tocSubEntryList">
+<!-- instance method --><li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/OrdCltn/remove:" target="_top">remove:</a></li>
+<li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/OrdCltn/remove:ifAbsent:" target="_top">remove:ifAbsent:</a></li>
+<li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/OrdCltn/removeAt:" target="_top">removeAt:</a></li>
+<li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/OrdCltn/removeFirst" target="_top">removeFirst</a></li>
+<li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/OrdCltn/removeLast" target="_top">removeLast</a></li>
 </ul>
 </div>
 </div>
