Finish off OrdCltn documentation.

--- a/ObjectKit/OrdCltn_h/Classes/OrdCltn/toc.html
+++ b/ObjectKit/OrdCltn_h/Classes/OrdCltn/toc.html
@@ -44,7 +44,7 @@
 </td>
 </tr></table>
 <div toc="collapsible" class="collapsible">
-<span class="hd_tocGroup">Adding </span>
+<span class="hd_tocGroup">Adding</span>
 <span class="hd_tocAccess">Instance Methods</span>
 <ul class="tocSubEntryList">
 <!-- instance method --><li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/OrdCltn/add:" target="_top">add:</a></li>
@@ -56,39 +56,95 @@
 <li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/OrdCltn/insert:before:" target="_top">insert:before:</a></li>
 </ul>
 <span class="hd_tocGroupSpace">&nbsp;<br></span>
-<span class="hd_tocGroup">Enumeration </span>
+<span class="hd_tocGroup">Adding and removing contents</span>
+<span class="hd_tocAccess">Instance Methods</span>
+<ul class="tocSubEntryList">
+<!-- instance method --><li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/OrdCltn/addAll:" target="_top">addAll:</a></li>
+<li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/OrdCltn/removeAll:" target="_top">removeAll:</a></li>
+</ul>
+<span class="hd_tocGroupSpace">&nbsp;<br></span>
+<span class="hd_tocGroup">Combining</span>
+<span class="hd_tocAccess">Instance Methods</span>
+<ul class="tocSubEntryList">
+<!-- instance method --><li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/OrdCltn/difference:" target="_top">difference:</a></li>
+<li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/OrdCltn/intersection:" target="_top">intersection:</a></li>
+<li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/OrdCltn/union:" target="_top">union:</a></li>
+</ul>
+<span class="hd_tocGroupSpace">&nbsp;<br></span>
+<span class="hd_tocGroup">Conversion</span>
+<span class="hd_tocAccess">Instance Methods</span>
+<ul class="tocSubEntryList">
+<!-- instance method --><li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/OrdCltn/asOrdCltn" target="_top">asOrdCltn</a></li>
+<li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/OrdCltn/asSet" target="_top">asSet</a></li>
+</ul>
+<span class="hd_tocGroupSpace">&nbsp;<br></span>
+<span class="hd_tocGroup">Enumeration</span>
 <span class="hd_tocAccess">Instance Methods</span>
 <ul class="tocSubEntryList">
 <!-- instance method --><li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/OrdCltn/do:" target="_top">do:</a></li>
 <li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/OrdCltn/do:until:" target="_top">do:until:</a></li>
+<li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/OrdCltn/elementsPerform:" target="_top">elementsPerform:</a></li>
 <li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/OrdCltn/reverseDo:" target="_top">reverseDo:</a></li>
 </ul>
 <span class="hd_tocGroupSpace">&nbsp;<br></span>
-<span class="hd_tocGroup">Indexed retrieval </span>
+<span class="hd_tocGroup">Factory</span>
+<span class="hd_tocAccess">Class Methods</span>
+<ul class="tocSubEntryList">
+<!-- class method --><li class="tocSubEntry"><a href="index.html#//apple_ref/occ/clm/OrdCltn/new:" target="_top">new:</a></li>
+<li class="tocSubEntry"><a href="index.html#//apple_ref/occ/clm/OrdCltn/with:" target="_top">with:</a></li>
+<li class="tocSubEntry"><a href="index.html#//apple_ref/occ/clm/OrdCltn/with:with:" target="_top">with:with:</a></li>
+</ul>
+<span class="hd_tocGroupSpace">&nbsp;<br></span>
+<span class="hd_tocGroup">Functional</span>
+<span class="hd_tocAccess">Instance Methods</span>
+<ul class="tocSubEntryList">
+<!-- instance method --><li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/OrdCltn/collect:" target="_top">collect:</a></li>
+<li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/OrdCltn/count:" target="_top">count:</a></li>
+<li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/OrdCltn/detect:" target="_top">detect:</a></li>
+<li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/OrdCltn/detect:ifNone:" target="_top">detect:ifNone:</a></li>
+<li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/OrdCltn/reject:" target="_top">reject:</a></li>
+<li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/OrdCltn/select:" target="_top">select:</a></li>
+</ul>
+<span class="hd_tocGroupSpace">&nbsp;<br></span>
+<span class="hd_tocGroup">Indexed retrieval</span>
 <span class="hd_tocAccess">Instance Methods</span>
 <ul class="tocSubEntryList">
 <!-- instance method --><li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/OrdCltn/after:" target="_top">after:</a></li>
 <li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/OrdCltn/at:" target="_top">at:</a></li>
 <li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/OrdCltn/at:put:" target="_top">at:put:</a></li>
 <li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/OrdCltn/before:" target="_top">before:</a></li>
+<li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/OrdCltn/firstElement" target="_top">firstElement</a></li>
+<li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/OrdCltn/lastElement" target="_top">lastElement</a></li>
 </ul>
 <span class="hd_tocGroupSpace">&nbsp;<br></span>
-<span class="hd_tocGroup">Inquiry </span>
+<span class="hd_tocGroup">Inquiry</span>
 <span class="hd_tocAccess">Instance Methods</span>
 <ul class="tocSubEntryList">
 <!-- instance method --><li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/OrdCltn/isEmpty" target="_top">isEmpty</a></li>
+<li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/OrdCltn/isEqual:" target="_top">isEqual:</a></li>
 <li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/OrdCltn/lastOffset" target="_top">lastOffset</a></li>
 <li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/OrdCltn/size" target="_top">size</a></li>
 </ul>
 <span class="hd_tocGroupSpace">&nbsp;<br></span>
-<span class="hd_tocGroup">Instance management </span>
+<span class="hd_tocGroup">Instance management</span>
 <span class="hd_tocAccess">Instance Methods</span>
 <ul class="tocSubEntryList">
 <!-- instance method --><li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/OrdCltn/copy" target="_top">copy</a></li>
 <li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/OrdCltn/deepCopy" target="_top">deepCopy</a></li>
+<li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/OrdCltn/emptyYourself" target="_top">emptyYourself</a></li>
 </ul>
 <span class="hd_tocGroupSpace">&nbsp;<br></span>
-<span class="hd_tocGroup">Removal </span>
+<span class="hd_tocGroup">Locating</span>
+<span class="hd_tocAccess">Instance Methods</span>
+<ul class="tocSubEntryList">
+<!-- instance method --><li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/OrdCltn/contains:" target="_top">contains:</a></li>
+<li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/OrdCltn/find:" target="_top">find:</a></li>
+<li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/OrdCltn/findMatching:" target="_top">findMatching:</a></li>
+<li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/OrdCltn/includes:" target="_top">includes:</a></li>
+<li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/OrdCltn/offsetOf:" target="_top">offsetOf:</a></li>
+</ul>
+<span class="hd_tocGroupSpace">&nbsp;<br></span>
+<span class="hd_tocGroup">Removal</span>
 <span class="hd_tocAccess">Instance Methods</span>
 <ul class="tocSubEntryList">
 <!-- instance method --><li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/OrdCltn/remove:" target="_top">remove:</a></li>
@@ -96,6 +152,13 @@
 <li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/OrdCltn/removeAt:" target="_top">removeAt:</a></li>
 <li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/OrdCltn/removeFirst" target="_top">removeFirst</a></li>
 <li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/OrdCltn/removeLast" target="_top">removeLast</a></li>
+</ul>
+<span class="hd_tocGroupSpace">&nbsp;<br></span>
+<span class="hd_tocGroup">Testing contents</span>
+<span class="hd_tocAccess">Instance Methods</span>
+<ul class="tocSubEntryList">
+<!-- instance method --><li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/OrdCltn/includesAllOf:" target="_top">includesAllOf:</a></li>
+<li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/OrdCltn/includesAnyOf:" target="_top">includesAnyOf:</a></li>
 </ul>
 </div>
 </div>
