--- a/ObjectKit/Dictionary_h/Classes/Dictionary/toc.html
+++ b/ObjectKit/Dictionary_h/Classes/Dictionary/toc.html
@@ -44,14 +44,55 @@
 </td>
 </tr></table>
 <div toc="collapsible" class="collapsible">
+<span class="hd_tocGroup">Comparison</span>
+<span class="hd_tocAccess">Instance Methods</span>
+<ul class="tocSubEntryList">
+<!-- instance method --><li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/Dictionary/hash" target="_top">hash</a></li>
+<li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/Dictionary/isEqual:" target="_top">isEqual:</a></li>
+</ul>
+<span class="hd_tocGroupSpace">&nbsp;<br></span>
+<span class="hd_tocGroup">Indexed insertion</span>
+<span class="hd_tocAccess">Instance Methods</span>
+<ul class="tocSubEntryList">
+<!-- instance method --><li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/Dictionary/atKey:put:" target="_top">atKey:put:</a></li>
+</ul>
+<span class="hd_tocGroupSpace">&nbsp;<br></span>
+<span class="hd_tocGroup">Indexed retrieval</span>
+<span class="hd_tocAccess">Instance Methods</span>
+<ul class="tocSubEntryList">
+<!-- instance method --><li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/Dictionary/atKey:" target="_top">atKey:</a></li>
+<li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/Dictionary/atKey:ifAbsent:" target="_top">atKey:ifAbsent:</a></li>
+</ul>
+<span class="hd_tocGroupSpace">&nbsp;<br></span>
+<span class="hd_tocGroup">Instance management</span>
 <span class="hd_tocAccess">Instance Methods</span>
 <ul class="tocSubEntryList">
 <!-- instance method --><li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/Dictionary/copy" target="_top">copy</a></li>
 <li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/Dictionary/deepCopy" target="_top">deepCopy</a></li>
 <li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/Dictionary/emptyYourself" target="_top">emptyYourself</a></li>
-<li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/Dictionary/includesKey:" target="_top">includesKey:</a></li>
-<li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/Dictionary/keysDo:" target="_top">keysDo:</a></li>
+</ul>
+<span class="hd_tocGroupSpace">&nbsp;<br></span>
+<span class="hd_tocGroup">Introspection</span>
+<span class="hd_tocAccess">Instance Methods</span>
+<ul class="tocSubEntryList">
+<!-- instance method --><li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/Dictionary/includesKey:" target="_top">includesKey:</a></li>
+<li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/Dictionary/isEmpty" target="_top">isEmpty</a></li>
 <li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/Dictionary/size" target="_top">size</a></li>
+</ul>
+<span class="hd_tocGroupSpace">&nbsp;<br></span>
+<span class="hd_tocGroup">Iteration</span>
+<span class="hd_tocAccess">Instance Methods</span>
+<ul class="tocSubEntryList">
+<!-- instance method --><li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/Dictionary/eachKey" target="_top">eachKey</a></li>
+<li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/Dictionary/eachValue" target="_top">eachValue</a></li>
+<li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/Dictionary/keysDo:" target="_top">keysDo:</a></li>
+</ul>
+<span class="hd_tocGroupSpace">&nbsp;<br></span>
+<span class="hd_tocGroup">Removal</span>
+<span class="hd_tocAccess">Instance Methods</span>
+<ul class="tocSubEntryList">
+<!-- instance method --><li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/Dictionary/removeKey:" target="_top">removeKey:</a></li>
+<li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/Dictionary/removeKey:ifAbsent:" target="_top">removeKey:ifAbsent:</a></li>
 </ul>
 </div>
 </div>
