--- a/ObjectKit/OCString_h/Classes/String/toc.html
+++ b/ObjectKit/OCString_h/Classes/String/toc.html
@@ -44,11 +44,69 @@
 </td>
 </tr></table>
 <div toc="collapsible" class="collapsible">
-<span class="hd_tocGroup">Instance management </span>
+<span class="hd_tocGroup">Comparison</span>
+<span class="hd_tocAccess">Instance Methods</span>
+<ul class="tocSubEntryList">
+<!-- instance method --><li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/String/compare:" target="_top">compare:</a></li>
+<li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/String/compareSTR:" target="_top">compareSTR:</a></li>
+<li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/String/dictCompare:" target="_top">dictCompare:</a></li>
+<li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/String/endsWith:" target="_top">endsWith:</a></li>
+<li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/String/hash" target="_top">hash</a></li>
+<li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/String/isEqual:" target="_top">isEqual:</a></li>
+<li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/String/isEqualSTR:" target="_top">isEqualSTR:</a></li>
+</ul>
+<span class="hd_tocGroupSpace">&nbsp;<br></span>
+<span class="hd_tocGroup">Concatenation</span>
+<span class="hd_tocAccess">Instance Methods</span>
+<ul class="tocSubEntryList">
+<!-- instance method --><li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/String/at:insert:" target="_top">at:insert:</a></li>
+<li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/String/at:insert:count:" target="_top">at:insert:count:</a></li>
+<li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/String/concat:" target="_top">concat:</a></li>
+<li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/String/concatSTR:" target="_top">concatSTR:</a></li>
+<li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/String/strcat:" target="_top">strcat:</a></li>
+</ul>
+<span class="hd_tocGroupSpace">&nbsp;<br></span>
+<span class="hd_tocGroup">Conversion</span>
+<span class="hd_tocAccess">Instance Methods</span>
+<ul class="tocSubEntryList">
+<!-- instance method --><li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/String/asDouble" target="_top">asDouble</a></li>
+<li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/String/asInt" target="_top">asInt</a></li>
+<li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/String/asLong" target="_top">asLong</a></li>
+<li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/String/asSTR:maxSize:" target="_top">asSTR:maxSize:</a></li>
+<li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/String/str" target="_top">str</a></li>
+<li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/String/strCopy" target="_top">strCopy</a></li>
+<li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/String/toLower" target="_top">toLower</a></li>
+<li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/String/toUpper" target="_top">toUpper</a></li>
+</ul>
+<span class="hd_tocGroupSpace">&nbsp;<br></span>
+<span class="hd_tocGroup">Factory &amp; Instance management</span>
 <span class="hd_tocAccess">Class Methods</span>
 <ul class="tocSubEntryList">
-<!-- class method --><li class="tocSubEntry"><a href="index.html#//apple_ref/occ/clm/String/sprintf:" target="_top">sprintf:</a></li>
+<!-- class method --><li class="tocSubEntry"><a href="index.html#//apple_ref/occ/clm/String/chars:count:" target="_top">chars:count:</a></li>
+<li class="tocSubEntry"><a href="index.html#//apple_ref/occ/clm/String/sprintf:" target="_top">sprintf:</a></li>
 <li class="tocSubEntry"><a href="index.html#//apple_ref/occ/clm/String/str:" target="_top">str:</a></li>
+<li class="tocSubEntry"><a href="index.html#//apple_ref/occ/clm/String/vsprintf:ap:" target="_top">vsprintf:ap:</a></li>
+</ul>
+<span class="hd_tocAccessSpace">&nbsp;<br></span>
+<span class="hd_tocAccess">Instance Methods</span>
+<ul class="tocSubEntryList">
+<!-- instance method --><li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/String/copy" target="_top">copy</a></li>
+</ul>
+<span class="hd_tocGroupSpace">&nbsp;<br></span>
+<span class="hd_tocGroup">Indexed access</span>
+<span class="hd_tocAccess">Instance Methods</span>
+<ul class="tocSubEntryList">
+<!-- instance method --><li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/String/charAt:" target="_top">charAt:</a></li>
+<li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/String/charAt:put:" target="_top">charAt:put:</a></li>
+<li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/String/size" target="_top">size</a></li>
+</ul>
+<span class="hd_tocGroupSpace">&nbsp;<br></span>
+<span class="hd_tocGroup">Substrings</span>
+<span class="hd_tocAccess">Instance Methods</span>
+<ul class="tocSubEntryList">
+<!-- instance method --><li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/String/componentsSeparatedByString:" target="_top">componentsSeparatedByString:</a></li>
+<li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/String/rangeOfString:" target="_top">rangeOfString:</a></li>
+<li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/String/substringWithRange:" target="_top">substringWithRange:</a></li>
 </ul>
 </div>
 </div>
